--- a/src/index.html
+++ b/src/index.html
@@ -22,5 +22,17 @@
         </div>
         <i class="fa-solid fa-bars text-[20px] md:hidden"></i>
     </header>
+
+    <div style="background-image: url(./BG.png); background-repeat: no-repeat; background-size: cover;   background-position: center;" class="mt-[20px]" >
+        <div class="max-w-[1200px] m-auto">
+            <div class="md:w-[30%] pt-[150px] md:py-[20%] py-[30%] w-[80%] mx-[10px]">
+                <h1 class="text-[#01996D] text-[50px] font-bold">Be aware, 
+                    Manage well.</h1>
+                    <p class="py-[20px] text-[#484848] ">Everyone experiences stress in different ways.
+                        Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                        <button class="bg-[#01996D] py-[15px] px-[40px] rounded-sm text-white">Find Your Way</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
