--- a/src/index.html
+++ b/src/index.html
@@ -34,5 +34,14 @@
             </div>
         </div>
     </div>
+
+    <div class="flex md:flex-row flex-col md:px-[0px] px-[10px] max-w-[1200px] m-auto mt-[100px] md:text-start text-center items-center">
+        <div class="md:pr-[50px] md:w-[90%]">
+            <h2 class="text-[#424242]">How it works</h2>
+            <h1 class="md:text-[40px] text-[30px] py-[20px] md:py-[0px] text-[#01996D] font-bold">Understand & Release 
+                the stress in 3 steps</h1>
+        </div>
+        <p class="text-[#424242]">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
+    </div>
 </body>
 </html>
