--- a/src/index.html
+++ b/src/index.html
@@ -48,21 +48,22 @@
         <div class="flex md:flex-row flex-col gap-[50px] mx-[20px] mt-[100px]">
             <div class="md:w-[50%] md:text-start text-center">
                 <h2 class="font-bold text-center">Personalize</h2>
-                <p class="py-[20px]">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
+                <p class="py-[20px] text-[#424242]">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
                 <img src="./Rectangle 30.png" alt="">
             </div>
             <div class="md:mt-[200px] md:text-start text-center md:w-[50%]">
                 <h2 class="font-bold text-center">Write & Understand</h2>
-                <p class="py-[20px]">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
+                <p class="py-[20px] text-[#424242]">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!</p>
                 <img src="./Rectangle 30 (1).png" alt="">
             </div>
             <div class="md:w-[50%] md:text-start text-center">
                 <h2 class="font-bold text-center">Alivio!</h2>
-                <p class="py-[20px]">Now you are aware, and have a way to manage and overcome your own stress.
+                <p class="py-[20px] text-[#424242]">Now you are aware, and have a way to manage and overcome your own stress.
                     What are you waiting for? Alivio today!</p>
                 <img src="./Group 29.png" alt="">
             </div>
         </div>
     </div>
+    
 </body>
 </html>
