--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,17 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="bg-[#1d463b]">
+        <div class="max-w-[1200px] m-auto flex py-[100px] px-[20px] md:flex-row flex-col md:text-start text-center  items-center mt-[50px] ">
+            <div class="text-white ">
+                <h2 class="md:text-[50px] text-[30px] font-bold">Let's hear about Kayla's success story</h2>
+                <p class="py-[20px]">See how well Alivio works in a real customer’s life. </p>
+                <button class="bg-[#01996D] py-[15px] px-[40px] rounded-sm text-white">Let’s get started</button>
+            </div>
+            <img src="./Video.png" class="md:w-[55%] md:pt-[0px] pt-[20px]" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
