--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,23 @@
             <img src="./Video.png" class="md:w-[55%] md:pt-[0px] pt-[20px]" alt="">
         </div>
     </div>
+   
 
+        <div class="max-w-[1200px] m-auto relative flex py-[100px] px-[20px] md:flex-row flex-col md:text-start text-center  items-center mt-[50px] ">
+            <div class="md:pl-[100px] md:pr-[100px]">
+                <img src="./Image.png" class="" alt="">
+                <img src="./Card.png" class=" absolute top-[310px] left-[60px] w-[20%]" alt="">
+            </div>
+            <div class="text-black ">
+                <p class="text-[#484848]">Our product</p>
+                <h2 class="md:text-[50px] text-[#01996D] text-[30px] font-bold pt-[20px]">You tell us your stress,
+                    We make your diary</h2>
+                <p class="py-[20px] md:w-[60%] text-[#484848]">Everyone experiences it, and in different ways.
+                    Let Alivio guide you, in a personalized journal experience, to overcome your stress. </p>
+                <button class="bg-[#01996D] py-[15px] px-[40px] rounded-sm text-white">Find Your Way</button>
+            </div>
+        </div>
+
+    
 </body>
 </html>
