--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,16 @@
             </div>
         </div>
 
-    
+        <div class="bg-[#245852] py-[20px] mt-[50px]">
+            <div class="max-w-[1200px] m-auto flex md:flex-row flex-col items-center md:gap-[50px] gap-[30px] justify-center">
+                <img src="./Alivio.png" alt="">
+                <div class="text-white flex gap-[20px] md:flex-row items-center flex-col text-center">
+                    <p>Why Alivio</p>
+                    <p>Solutions</p>
+                    <p>Community</p>
+                    <p>Pricing</p>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
